force-app/main/default/objects/Spotify__mdt/Spotify__mdt.object-meta.xml
<CustomObject>
    <label>Spotify</label>
    <pluralLabel>Spotify</pluralLabel>
</CustomObject>