force-app/main/default/objects/Spotify__mdt/fields/auth_url__c.field-meta.xml
<CustomField>
    <fullName>auth_url__c</fullName>
    <defaultValue>&quot;https://accounts.spotify.com/authorize&quot;</defaultValue>
    <label>auth url</label>
    <type>Url</type>
</CustomField>