force-app/main/default/objects/Spotify__mdt/fields/Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Base_Url__c</fullName>
    <defaultValue>&quot;https://api.spotify.com/v1&quot;</defaultValue>
    <label>Base Url</label>
    <type>Url</type>
</CustomField>