force-app/main/default/objects/Spotify__mdt/fields/expires_in__c.field-meta.xml
<CustomField>
    <fullName>expires_in__c</fullName>
    <label>expires in ( seconds )</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>