force-app/main/default/objects/Spotify__mdt/fields/scope__c.field-meta.xml
<CustomField>
    <fullName>scope__c</fullName>
    <label>scope</label>
    <type>TextArea</type>
</CustomField>