force-app/main/default/objects/Spotify__mdt/fields/token_url__c.field-meta.xml
<CustomField>
    <fullName>token_url__c</fullName>
    <defaultValue>&quot;https://accounts.spotify.com/api/token&quot;</defaultValue>
    <label>token url</label>
    <type>Url</type>
</CustomField>